--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,92 @@
 /* your code here */
+*{
+	margin:0px;
+	padding:0px;
+	line-height:1.5rem;
+	box-sizing:border-box;
+	font-size:1.1rem;
+	
+}
+
+h3{
+	font-weight:normal;
+	font-size:1.3rem
+	
+}
+
+h3::after{
+	content:"";
+	display:block;
+	width:40%;
+	border-bottom:2px solid;
+	margin:0.2rem 0 0.3rem 0;
+}
+
+li{
+	list-style:none;
+}
+
+.content{
+	border:2px solid;
+	padding:3rem;
+	background:black;
+	color:white;
+/* 	margin:4rem; */
+}
+
+.top{
+/* 	border:2px solid red; */
+	padding:1rem;
+	display:flex;
+
+	justify-content:space-between;
+/* 	justify-content:space-around; */
+	flex-wrap:wrap;
+	
+}
+
+.logo-details{
+	align-self:center;
+}
+
+
+
+.logo_name{
+	font-size:3rem;
+
+	
+	
+}
+
+.media-icons i{
+	margin:0.5rem;
+}
+
+/* /////////////////link-boxex/////////////////// */
+
+.link-boxes{
+/* 	border:2px solid green; */
+	margin-top:3rem;
+	padding:2rem;
+	display:flex;
+	justify-content:space-between;
+}
+
+
+/* /////////////////Bottom/////////// */
+
+.bottom-details{
+/* 	border:2px solid brown; */
+/* 	width:90%;
+	margin:auto; */
+	padding:1.5rem;
+	display:flex;
+	justify-content:space-between;
+}
+
+
+
+
+
+
+
