--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,14 @@
 	font-size:1.1rem;
 	
 }
+a{
+	text-decoration: none;
+	color:white;
+}
+
+a:visited{
+	color:white;
+}
 
 h3{
 	font-weight:normal;
